# jobpulse

./: .gitignore  .seshat  AGENTS.md  README.md  pyproject.toml  seshat-review.md
apps/api/: Dockerfile
apps/api/app/: main.py  settings.py
apps/api/app/routers/: health.py
apps/worker/: Dockerfile
apps/worker/jobpulse_worker/: celery_app.py  tasks.py
apps/worker/jobpulse_worker/models/: __init__.py  job_item.py
apps/worker/jobpulse_worker/observability/: logging.py  metrics.py
apps/worker/jobpulse_worker/pipeline/: __init__.py  persist.py
apps/worker/jobpulse_worker/utils/: backoff.py  fingerprint.py  rate_limit.py
db/: schema.sql
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: jobpulse.json
infra/grafana/provisioning/dashboards/: dashboards.yml
